--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"//2": "https://docs.npmjs.com/files/package.json",
 	"//3": "updating this file will download and update your packages",
 	"name": "my-hyperdev-app",
-	"version": "0.0.1",
-	"description": "What am I about?",
+	"version": "1.0.0",
+	"description": "Quality assurance with Chai",
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js"
@@ -20,12 +20,13 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://hyperdev.com/#!/project/welcome-project"
+		"url": "https://github.com/HealerC/boilerplate-mochachai.git"
 	},
 	"keywords": [
 		"node",
 		"hyperdev",
 		"express"
 	],
+	"author": "Uyioghosa Nosa-Ihaza",
 	"license": "MIT"
 }
